[gd_scene load_steps=4 format=3 uid="uid://dmitwxkq82w1t"]

[ext_resource type="Script" path="res://src/scenes/menus/pause_menu.gd" id="1_n7fhy"]
[ext_resource type="Theme" uid="uid://bkik345fd6hmf" path="res://src/assets/themes/Basicbutton.tres" id="2_5s7ck"]
[ext_resource type="FontFile" uid="uid://h7fhpixtefq0" path="res://src/assets/fonts/NewAmsterdam-Regular.ttf" id="2_222ty"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_n7fhy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 0.552941)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
theme = ExtResource("2_5s7ck")
theme_override_fonts/font = ExtResource("2_222ty")
theme_override_font_sizes/font_size = 48
text = "Resume"

[node name="RestartRun" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_5s7ck")
theme_override_fonts/font = ExtResource("2_222ty")
theme_override_font_sizes/font_size = 32
text = "Restart Run"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Resume")
theme = ExtResource("2_5s7ck")
theme_override_fonts/font = ExtResource("2_222ty")
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartRun" to="." method="_on_restart_run_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
